[package]
authors = ["e-matteson <e.r.matteson@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "dotstar-bluepill"
version = "0.1.0"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.5"
cortex-m-semihosting = "0.3.2"
panic-semihosting = "*"
stm32f103xx-hal = { git = "https://github.com/japaric/stm32f103xx-hal", rev = "c9d9a86bcb4c493c72b6c5a805e2dd838e2e907f" }

dotstar = { path = "../dotstar" }

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
