[package]
authors = ["e-matteson <e.r.matteson@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "dotstar-bluepill"
version = "0.1.0"

[dependencies]
dotstar = { path = "../dotstar" }
cortex-m-rt = "0.6.5"
cortex-m-semihosting = "0.3.2"
panic-semihosting = "*"

[dependencies.cortex-m]
version = "0.5.8"
features = ["const-fn"]

[dependencies.stm32f1xx-hal]
# version = "0.2.0"
git = "https://github.com/e-matteson/stm32f1xx-hal"
features = ["stm32f103", "rt"]


[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
incremental = false
